teamcity/sercvice-tc-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: teamcity-server
  name: teamcity-server-service
spec:
  ports:
    - port: 8111
      protocol: TCP
      targetPort: 8111
  selector:
    app: teamcity-server
  type: ClusterIP
