teamcity/ingress-tc-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teamcity-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: teamcity.rubini.com.ar
      http:
        paths:
          - backend:
              service:
                name: teamcity-server-service
                port:
                  number: 8111
            path: /
            pathType: Prefix
